--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,7 +1,8 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: auto;
+  height: 100%;
+  max-height: 960px;
   background-color: #f5f0ec;
 
   @media (max-width: 768px) {
