--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -30,3 +30,12 @@ img {
   object-fit: cover;
   display: flex;
 }
+
+.container {
+  width: 100%;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+}
