Add new logo SVGs and create MainLayout stylesheet
- Added large logo SVG file at public/images/logo-large.svg
- Added small logo SVG file at public/images/logo-small.svg
- Created an empty MainLayout.module.scss stylesheet for future styling

--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -31,6 +31,15 @@ img {
   display: flex;
 }
 
+.main {
+  background-color: #fff;
+}
+
+.main-layout {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+}
+
 .container {
   width: 100%;
   max-width: 1500px;
