--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,3 @@
-@use "./scss/fonts";
-@use "./scss/variables";
-@use "./scss/resets";
+@import "./scss/variables";
+@import "./scss/fonts";
+@import "./scss/resets";
