--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,110 +1,7 @@
-.wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: 100%;
-  max-height: 960px;
-  background-color: #f5f0ec;
-
-  @media (max-width: 768px) {
-    grid-template-columns: 1fr;
-  }
-}
-
-.left {
-  background-color: #1e1e1e;
-  color: white;
-  padding: 4rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  img {
-    width: 560px;
-    height: 960px;
-    margin-bottom: 2rem;
-  }
-
-  h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
-
-  p {
-    font-size: 1rem;
-    opacity: 0.7;
-    text-align: center;
-  }
-}
-
-.right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.form {
-  background: white;
-  padding: 2rem;
-  border-radius: 1rem;
-  width: 100%;
-  max-width: 560px;
-  height: 422px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-
-  h2 {
-    font-size: 3.2rem;
-    margin-bottom: 3.2rem;
-    font-weight: 700;
-    color: #201f24;
-  }
-
-  label {
-    display: block;
-    margin: 1rem 0 0.25rem;
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: #696868;
-    margin-bottom: 0.4rem;
-  }
-
-  input {
-    width: 100%;
-    max-width: 496px;
-    height: 45px;
-    padding: 0.75rem;
-    border: 1px solid #ddd;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem;
-  }
-
-  button {
-    margin-top: 1rem;
-    width: 100%;
-    max-width: 496px;
-    height: 53px;
-    flex: 1;
-    padding: 0.75rem;
-    border: none;
-    border-radius: 0.5rem;
-    font-weight: 700;
-    font-size: 1.4rem;
-    cursor: pointer;
-    background-color: #201f24;
-    color: #fff;
-  }
-
-  .footer {
-    margin-top: 1rem;
-    font-size: 1.4rem;
-    text-align: center;
-    font-weight: 400;
-
-    a {
-      font-size: 1.4rem;
-      margin-left: 0.25rem;
-      font-weight: 700;
-      color: #000;
-    }
+.login {
+  height: 100vh;
+  div {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
   }
 }
