feat: implement Forminput component and integrate into Login and Register pages style: update styles for Login and Register pages for improved layout and presentation refactor: switch from @import to @use for SCSS imports in various files

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
-@import "./scss/variables";
-@import "./scss/fonts";
-@import "./scss/resets";
+@use "./scss/variables" as *;
+@use "./scss/fonts" as *;
+@use "./scss/resets" as *;
+@use "./scss/button" as *;
