--- a/src/pages/register/register.module.scss
+++ b/src/pages/register/register.module.scss
@@ -1,3 +1,119 @@
-h1 {
-  background-color: $cyan;
+@import "../../scss/variables";
+
+.login {
+  height: 100%;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  padding: 2rem;
+  height: 100%;
+}
+
+.login_left {
+  background-image: url("../images/illustration-authentication.svg");
+  background-size: cover;
+  background-position: center;
+  padding: 4rem;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+
+  img {
+    margin-bottom: auto;
+  }
+}
+
+.title {
+  font-size: $text-preset-1;
+  line-height: 120%;
+  color: $white;
+  font-weight: 700;
+  margin-bottom: 2.4rem;
+}
+
+.text {
+  font-size: $text-preset-4;
+  line-height: 150%;
+  color: $white;
+  font-weight: 400;
+}
+
+.login_right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  div {
+    background-color: $white;
+    padding: 3.2rem;
+    width: 100%;
+    max-width: 560px;
+    height: 422px;
+    border-radius: $spacing-400;
+  }
+}
+
+.login_title {
+  font-size: $text-preset-1;
+  line-height: 120%;
+  color: $grey-900;
+  margin-bottom: 3.2rem;
+}
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 3.2rem;
+}
+
+.login_btn {
+  margin-top: 3rem;
+  border-radius: 8px;
+  padding-top: 1.6rem;
+  padding-bottom: 1.6rem;
+  background-color: $grey-900;
+  border: 0;
+  cursor: pointer;
+  font-size: 1.4rem;
+  line-height: 150%;
+  font-weight: 700;
+  color: $white;
+  font-family: inherit;
+  transition: 0.3s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+.login_form_text {
+  text-align: center;
+  margin-top: 3.2rem;
+  font-size: $text-preset-4;
+  line-height: 150%;
+  color: $grey-500;
+  font-weight: 400;
+}
+
+.login_form_link {
+  font-size: $text-preset-4;
+  line-height: 150%;
+  color: $grey-900;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.form_text {
+  text-align: end;
+  font-size: $text-preset-5;
+  line-height: 150%;
+  color: $grey-500;
+  font-weight: 400;
 }
