--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -14,6 +14,8 @@ html {
 
 body {
   font-family: "Public Sans";
+  height: 100%;
+  background-color: #f8f4f0;
 }
 
 a {
@@ -31,8 +33,8 @@ img {
   display: flex;
 }
 
-.main {
-  background-color: #fff;
+#root {
+  height: 100%;
 }
 
 .main-layout {
