--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -1,3 +1,8 @@
+@import "../../scss/variables";
+
 .header {
-  background-color: blue;
+  background-color: #201f24;
+  height: 100vh;
+  padding-top: 4rem;
+  padding-right: 2.4rem;
 }
