--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -63,7 +63,7 @@ img {
 }
 
 .header.sidebar {
-  transform: translateX(-300px);
+  width: 150px;
 
   position: absolute;
 }
@@ -75,4 +75,8 @@ img {
   margin-right: auto;
   padding-left: 30px;
   padding-right: 30px;
+}
+
+.main.sidebar {
+  padding-left: 150px;
 }
